# LosESEHermanos

./: .gitignore  Measurements.py  README.md  Smart Garbage Cans.docx  Verifications.xlsx  constraints.eapx
01_EA projects/: CompleteModel.xml  Model.xml  constraints.eapx  constraints.ldb
Par Diagrams Traffic Light/: traffic_light.qea
SequenceDigram/EA/: SmartGarbage.eap  SmartGarbageInteractionWithTraficLight.eap  TrafficLightsRoutine.eap  TrafficLightsRoutine2.0.eap  TrafficLightsRoutine2.0.ldb
Sked/: configuration.json
StateMachine/ImplementationTrafficLight/ESP_Traffic_Light_Port/src/: SimpleTrafficLight.cpp  SimpleTrafficLight.hpp  main.cpp  utils.hpp
StateMachine/ImplementationTrafficLight/ImplementationTrafficLight/: SimpleTrafficLight.cpp  main.cpp  utils.cpp
StateMachine/ImplementationTrafficLight/TL_Arduino/: TL_Arduino.ino
StateMachine/NormalRoutineState/: NormalRoutineState.eapx
Traffic light/: traffic_light.qea
TrafficLightCompl/: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  README.md  TrafficLight.cpp  TrafficLight.hpp  TrafficLightThreads  Types.cpp  Types.hpp  VehicleTrafficLight.cpp  VehicleTrafficLight.hpp  include.h  launch.sh  main.cpp
TrafficLightCompl/TrafficLight/: DoubleTrafficLight.cpp  DoubleTrafficLight.hpp  QuadriTrafficLight.cpp  QuadriTrafficLight.hpp  SimpleTrafficLight.cpp  SimpleTrafficLight.hpp  TrafficLightDemo  launch.sh  main.cpp
TrafficLightCompl/TrafficLight/utils/: utils.cpp  utils.hpp
TrafficLightCompl/tests/: TrafficLightTest.cpp
